# mlops2025

./: .pre-commit-config.yaml
lesson2/: .gitignore
lesson2/seminar/step5_homework_model_validation_and_metrics/: .gitignore  params.yaml  pyproject.toml
lesson2/seminar/step5_homework_model_validation_and_metrics/src/: create_bad_data.py  evaluate.py  get_data.py  preprocess.py  train.py  validate_data.py  validate_model.py
