[tool.poetry]
name = "step5_homework_model_validation_and_metrics"
version = "0.1.0"
description = "MLOps homework 1"
authors = ["Zhivago Arseny <zhivagoav@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "~2.2"
scikit-learn = "~1.5"
dvc = "~3.50"
great-expectations = "~0.18"
pyyaml = "~6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ruff = "^0.2.0"
isort = "^5.13.2"
pre-commit = "^3.0.0"
pytest = "^7.0.0"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
